Fix extra space on right side

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -625,7 +625,9 @@ ol.gradient-list > li + li {
 .About {
   padding: 1rem;
   margin-top: 30px;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .AboutText {
